Fixed issues with box-shadow and images

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
 
         <h2>Inventor of HTML</h2>
         <p>Tim Berners-Lee is the <strong>inventor</strong> of the Web. In 1989, Tim was working in a computer services section of the CERN when he came up with the concept; at the time he had no idea that it would be implemented on such an <strong>enormous scale.</strong></p>
-        <p><a href="https://fr.wikipedia.org/wiki/Tim_Berners-Lee">See for yourself</a></p>
-    </header>
+        
+        <a id="wiki-link" href="https://fr.wikipedia.org/wiki/Tim_Berners-Lee">See for yourself</a>
+        
+        </header>
 
     <nav id="social-media">
         <ul>
@@ -34,7 +36,7 @@
         <h2>His favorite movies</h2>
         <div class="grid-container">
             <figure class="visual">
-                <img src="images/2001" alt="2001: a space odyssey">
+                <img id="hero" src="images/2001" alt="2001: a space odyssey">
             </figure>
             <h3 class="title">2001: A Space Odyssey</h3>
             <p class="synopsis">Humanity finds a mysterious, obviously artificial object buried beneath the Lunar surface and, with the intelligent computer H.A.L. 9000, sets off on a quest.</p>
