--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,23 +12,21 @@
 </head>
 
 <body>
+
     <header>
-        <figure>
+        <figure id="hero">
             <img src="images/tim-berners-lee" alt="Tim Berners-Lee">
         </figure>
         <h1>Tim Berners-Lee</h1>
-
         <h2>Inventor of HTML</h2>
-        <p>Tim Berners-Lee is the <strong>inventor</strong> of the Web. In 1989, Tim was working in a computer services section of the CERN when he came up with the concept; at the time he had no idea that it would be implemented on such an <strong>enormous scale.</strong></p>
-        
-        <a id="wiki-link" href="https://fr.wikipedia.org/wiki/Tim_Berners-Lee">See for yourself</a>
-        
-        </header>
+        <p>Tim Berners-Lee is the <strong>inventor</strong> of the Web. In 1989, Tim was working in a computer services section of the CERN when he came up with the concept; at the time he had no idea that it would be implemented on such an <strong>enormous scale.</strong></p>   
+        <a id="wiki-link" href="https://fr.wikipedia.org/wiki/Tim_Berners-Lee">See for yourself</a>     
+    </header>
 
     <nav id="social-media">
         <ul>
-            <li><i class="fab fa-facebook-f"><a href="">Facebook</a></i></li>
-            <li><i class="fab fa-linkedin-in"><a href="">LinkedIn</a></i></li>
+            <li><i class="fab fa-facebook-f"></i><a href="">Facebook</a></li>
+            <li><i class="fab fa-linkedin-in"></i><a href="">LinkedIn</a></li>
             <li><i class="fab fa-twitter"></i><a href="">Twitter</a></li>
         </ul>
     </nav>
@@ -36,7 +35,7 @@
         <h2>His favorite movies</h2>
         <div class="grid-container">
             <figure class="visual">
-                <img id="hero" src="images/2001" alt="2001: a space odyssey">
+                <img src="images/2001" alt="2001: a space odyssey">
             </figure>
             <h3 class="title">2001: A Space Odyssey</h3>
             <p class="synopsis">Humanity finds a mysterious, obviously artificial object buried beneath the Lunar surface and, with the intelligent computer H.A.L. 9000, sets off on a quest.</p>
@@ -58,7 +57,9 @@
     </main>
 
     <footer>
-        <p>Made by <a href="">Valentin Massart</a> for <a href="">BeCode</a></p>
+        <p>Made by <a href="https://massartval.github.io/">Valentin Massart</a> for <a href="https://becode.org/">BeCode</a></p>
     </footer>
+
 </body>
+
 </html>
